samples/_failures_safe/1761551696_6bbabb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b67a5d0d.c: In function ‘parse_term’:
./samples/SAFE/__tmp_b67a5d0d.c:146: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_b67a5d0d.c:145:9: error: expected declaration or statement at end of input
  145 |         } else if
      |         ^
./samples/SAFE/__tmp_b67a5d0d.c:145:9: error: expected declaration or statement at end of input
